# Agno-Projet

./: README.md  app.py  app_streamlit.py  app_telegram.py  app_whatsapp.py  env.example  pyproject.toml
src/AgnoProject/agents/: contract_structure.py  legal_framework.py
src/AgnoProject/core/: base_team.py
src/AgnoProject/interfaces/: whatsapp.py
src/AgnoProject/teams/: review_contract.py
src/AgnoProject/tools/: get_document.py
src/AgnoProject/utils/: exceptions.py  logging.py
src/AgnoTest/agents/: negociation.py
src/AgnoTest/core/: base_agent.py  base_interface.py  base_orchestrator.py  config.py
src/AgnoTest/interfaces/: telegram.py
src/AgnoTest/registry/: __init__.py  agents.py  teams.py  tools.py
src/AgnoTest/teams/: __init__.py
src/AgnoTest/utils/: exceptions.py  paths.py  validation.py
